[gd_scene load_steps=5 format=3 uid="uid://bf82520wbfcrk"]

[ext_resource type="Script" path="res://character_body_3d.gd" id="1_dlevm"]
[ext_resource type="PackedScene" uid="uid://gvm0me264r32" path="res://models/disguise-glasses.glb" id="2_wlrof"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_eywme"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pio50"]

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_dlevm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_eywme")

[node name="WorldModel" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_pio50")

[node name="disguise-glasses" parent="WorldModel" instance=ExtResource("2_wlrof")]
transform = Transform3D(-1.5, 0, 1.31134e-07, 0, 1.5, 0, -1.31134e-07, 0, -1.5, 0.00624865, 1.2541, -0.21075)

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="CameraSmooth" type="Node3D" parent="Head"]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="Head/CameraSmooth"]
unique_name_in_owner = true
cull_mask = 1048573

[node name="StairsAhead" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.495951, -0.65602)
target_position = Vector3(0, -0.55, 0)

[node name="StairsBelow" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, -0.75, 0)
